--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ Flask = "^2.0.0"
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 ipython = "^7.23"
+flake8 = "^3.9.2"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
